# Tape-Recorder

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  USER_README.md  app.py  benchmark.json  build.py  config.json  create_release.py  inference.py  pyproject.toml  requirements.txt  run_trainings.py  train.py
docs/: ALIGNMENT-ALGORITHMS.md  PROJECT-PLAN.md
notebooks/: align-input-output.ipynb  audio-compiler.ipynb  demo-audio-chunking.ipynb  demo-audio-compiler.ipynb  demo-loudness-normalisation.ipynb  demo-play-before-after-audio.ipynb  demo-read-audiofiles.ipynb
src/: AudioProcessing.py  AudioProcessor.py  audio_processor.py  audio_processor_torch.py  benchmark.py  dataset.py  experiment_manager.py  main.py  model.py
src/utils/: config.py
tests/: test_config.py
