[project]
name = "bandsalat"
version = "0.1.0"
description = "Bandsalat - A Python project"
requires-python = ">=3.12"
dependencies = [
    "auraloss>=0.4.0",
    "jupyter",
    "librosa>=0.10.1",
    "matplotlib>=3.10.8",
    "pydub>=0.25.1",
    "scipy-stubs~=1.16.3",
    "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
